music starts playing when loading page

--- a/src/swarm/index.html
+++ b/src/swarm/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <canvas id="swarm"></canvas>
+		<audio id="audio" src="music/sacred_river.mp3"></audio>
         <script src="js/index.js"></script>
         <script src="js/smallprng.js"></script>
     </body>
