--- a/src/swarm/index.html
+++ b/src/swarm/index.html
@@ -4,9 +4,17 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
+        <div id="introContainer">
+            <div id="intro">
+                <span id="theswarm">The Swarm</span>
+                <div></div>
+                <span id="cubeparty">CubeParty 6.11.-15</span>
+            </div>
+        </div>
         <canvas id="swarm"></canvas>
 		<audio id="audio" src="music/sacred_river.mp3"></audio>
         <script src="js/index.js"></script>
         <script src="js/smallprng.js"></script>
+        <script src="js/jquery/jquery.min.js"></script>
     </body>
 </html>
