--- a/src/swarm/index.html
+++ b/src/swarm/index.html
@@ -1,4 +1,5 @@
 <html>
+    <meta charset="UTF-8">
     <head>
         <title>Swarm @ CubeParty 2015</title>
         <link rel="stylesheet" href="css/app.css">
@@ -8,7 +9,10 @@
             <div id="intro">
                 <span id="theswarm">The Swarm</span>
                 <div></div>
+                <span id="name"> by Jani Keränen</span>
+                <div></div>
                 <span id="cubeparty">CubeParty 6.11.-15</span>
+                <div></div>
             </div>
         </div>
         <canvas id="swarm"></canvas>
