--- a/src/swarm/index.html
+++ b/src/swarm/index.html
@@ -1,7 +1,7 @@
 <html>
     <meta charset="UTF-8">
     <head>
-        <title>Swarm @ CubeParty 2015</title>
+        <title>The Swarm @ CubeParty 2015</title>
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
